--- a/creators/hashvt.html
+++ b/creators/hashvt.html
@@ -14,8 +14,8 @@
     <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="header-footer.js"></script>
-    <script type="text/javascript" src="darkmode.js" defer></script>
+    <script src="/header-footer.js"></script>
+    <script type="text/javascript" src="/darkmode.js" defer></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
@@ -39,54 +39,81 @@
     <global-header></global-header>
 
     <div class="container">
-        <div class="banner-container"></div>
         <div class="main">
-            <h1>About Us</h1>
+            <h1>About Me</h1>
             <p class="about-me">
-                We’re a group of creators, each bringing our own style and passion.
-                Together, we aim to entertain, connect, and create something bigger than ourselves
+                Hey, I'm HashVT. Your trending Tanuki basement dweller. Likes gaming & hunting shiny objects ^-^ [EN/FR]
             </p>
+            <div class="pfp-container">
+                <img class="pfp" src="/PFPs/HashVT.webp" alt="TheDoctorTTV">
+            </div>
         </div>
         <div class="discord">
-            <h1>TheTimeVortex Discord!</h1>
-            <p>Come join the Discord server! You'll get notified when any of our creators are live on Twitch, YouTube or
-                any other plarforms that they may
-                stream on. You can chill with us, talk, game, or participate in group watch. It's all about having fun
-                and forgetting about the drama.</p>
+            <h1>Trending Squad Discord!</h1>
+            <p>Come Join the Trending Squad Discord Server, here you can talk, hangout and get notified when I go live. </p>
             <br><br>
-            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
+            <h3><a class="discordinvite" href="https://discord.com/invite/HgVsyVn" target="_blank">Join</a></h3>
         </div>
     </div>
 
     <div class="social-container">
         <div class="socials">
-            <h1>Meet Our Creators</h1>
+            <h1>HashVT's Social Media</h1>
             <br><br>
             <ul class="social-page-icons">
                 <li class="card">
-                    <a href="/creators/thedoctorttv.html">
-                        <img src="icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
-                        <span class="creator-name">TheDoctorTTV</span>
+                    <a href="https://twitch.tv/HashVT" target="_blank">
+                        <img src="/icons/twitch.svg" alt="Twitch">
+                        <span class="creator-name">Twitch</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="/creators/azzy123.html">
-                        <img src="PFPs/azzy123-pfp.webp" alt="Azzy123">
-                        <span class="creator-name">Azzy123</span>
+                    <a href="https://discord.com/invite/HgVsyVn" target="_blank">
+                        <img src="/icons/Discord.svg" alt="Discord">
+                        <span class="creator-name">Discord</span>
                     </a>
                 </li>
 
-                                <li class="card">
-                    <a href="/creators/hashvt.html">
-                        <img src="PFPs/HashVT.webp" alt="HashVT">
-                        <span class="creator-name">HashVT</span>
+                <li class="card">
+                    <a href="https://vm.tiktok.com/ZMA8hJ7eN/" target="_blank">
+                        <img src="/icons/tiktok.svg" alt="TikTok">
+                        <span class="creator-name">TikTok</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="https://www.youtube.com/c/HashtagGamerzz" target="_blank">
+                        <img src="/icons/youtube.svg" alt="YouTube">
+                        <span class="creator-name">YouTube</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="https://www.instagram.com/hash_vt?igsh=MXNnZmVlcDg5ODc1MQ==" target="_blank">
+                        <img class="theme-icon" src="/icons/Instagram_Glyph_Black.svg"
+                            data-light-icon="/icons/Instagram_Glyph_Black.svg"
+                            data-dark-icon="/icons/Instagram_Glyph_White.svg" alt="Instagram">
+                        <span class="creator-name">Instagram</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="https://streamlabs.com/hashvt/tip" target="_blank">
+                        <img src="/icons/streamlabs.svg" alt="Streamlabs">
+                        <span class="creator-name">Donations</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="https://osu.ppy.sh/users/15128778" target="_blank">
+                        <img src="/icons/osu.svg" alt="osu!">
+                        <span class="creator-name">osu!</span>
                     </a>
                 </li>
             </ul>
-
-
         </div>
+
         <script>
             const injectCursorPosition = ({ x, y }) => {
                 document.documentElement.style.setProperty('--x', Math.round(x) + 'px');
@@ -120,41 +147,6 @@
             observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
         </script>
     </div>
-
-
-    <!-- <div class="mc-container">
-        <div class="minecraft-section">
-            <h1>TheTimeVortex Create Modpack</h1>
-            <br>
-            <h3>Launcher Installation</h3>
-            <ul>
-                <li><a href="https://modrinth.com/modpack/thetimevortex-create" target="_blank">Modrinth Download</a>
-                </li>
-                <li><a href="https://www.curseforge.com/minecraft/modpacks/the-time-vortex-create"
-                        target="_blank">CurseForge Download</a></li>
-            </ul>
-            <br>
-            <h3>Manual Installation</h3>
-            <ul>
-                <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual-2.0.1.7z"
-                        target="_blank">Manual Download</a></li>
-                <li><a href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.0/forge-1.20.1-47.4.0-installer.jar"
-                        target="_blank">Forge Installer</a></li>
-            </ul>
-            <br>
-            <h3>Important Information</h3>
-            <p>When updating, please backup your <strong>journeymap</strong> folder to save your wavepoints.</p>
-            <p>Lastly, FTB mods aren't on Modrinth due to copyright issues.</p>
-            <br>
-            <h3>TheTimeVortex Create Server</h3>
-            <p>IP: <code class="server-ip">mc.thetimevortex.net</code></p>
-            <p>Fallback: <code class="server-ip">TheTimeVortexCreate.exaroton.me</code></p>
-            <p><strong>Server Availability:</strong> Not 24/7; whitelisted players can wake the server. The server will
-                mainly be up when TheDoctorttv is live on Twitch and Youtube.</p>
-        </div>
-    </div> -->
-
-
     <global-footer></global-footer>
 </body>
 
