--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="social-container">
         <div class="socials">
-            <h1>Meet Our Creators</h1>
+            <h1>Meet The Creators</h1>
             <br><br>
             <ul class="social-page-icons">
                 <li class="card">
