--- a/creators/cboydoesstuff.html
+++ b/creators/cboydoesstuff.html
@@ -14,8 +14,8 @@
     <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="header-footer.js"></script>
-    <script type="text/javascript" src="darkmode.js" defer></script>
+    <script src="/header-footer.js"></script>
+    <script type="text/javascript" src="/darkmode.js" defer></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
@@ -39,63 +39,81 @@
     <global-header></global-header>
 
     <div class="container">
-        <div class="banner-container"></div>
         <div class="main">
-            <h1>About Us</h1>
+            <h1>About Me</h1>
             <p class="about-me">
-                We’re a group of creators, each bringing our own style and passion.
-                Together, we aim to entertain, connect, and create something bigger than ourselves
+                Hey, I'm <strong>CBoyDoesStuff</strong>! I love to play video games and make people laugh!!!! Enjoy the content and i hope to be the best streamer you've ever seen!
             </p>
+            <div class="pfp-container">
+                <img class="pfp" src="/PFPs/CBoyPFP.webp" alt="CBoyDoesStuff">
+            </div>
         </div>
         <div class="discord">
-            <h1>TheTimeVortex Discord!</h1>
-            <p>Come join the Discord server! You'll get notified when any of our creators are live on Twitch, YouTube or
-                any other plarforms that they may
-                stream on. You can chill with us, talk, game, or participate in group watch. It's all about having fun
-                and forgetting about the drama.</p>
+            <h1>CBoy's Wannabe Club Discord!</h1>
+            <p>Want To Be A Loser?!?! COME AND JOIN THE WANNABES!!!</p>
             <br><br>
-            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
+            <h3><a class="discordinvite" href="https://discord.gg/8aCHvWKDee" target="_blank">Join</a></h3>
         </div>
     </div>
 
     <div class="social-container">
         <div class="socials">
-            <h1>Meet The Creators</h1>
+            <h1>CBoyDoesStuff's Social Media</h1>
             <br><br>
             <ul class="social-page-icons">
                 <li class="card">
-                    <a href="/creators/thedoctorttv.html">
-                        <img src="icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
-                        <span class="creator-name">TheDoctorTTV</span>
+                    <a href="https://youtube.com/@CBoyDoesStuff" target="_blank">
+                        <img src="/icons/youtube.svg" alt="Youtube">
+                        <span class="creator-name">Youtube</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="/creators/azzy123.html">
-                        <img src="PFPs/azzy123-pfp.webp" alt="Azzy123">
-                        <span class="creator-name">Azzy123</span>
+                    <a href="https://www.twitch.tv/cboydoesstuff" target="_blank">
+                        <img src="/icons/twitch.svg" alt="Twitch">
+                        <span class="creator-name">Twitch</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="/creators/hashvt.html">
-                        <img src="PFPs/HashVT.webp" alt="HashVT">
-                        <span class="creator-name">HashVT</span>
+                    <a href="https://x.com/CBoyDoesStuff" target="_blank">
+                        <img src="/icons/twitter.svg" alt="Twitter">
+                        <span class="creator-name">Twitter (X)</span>
                     </a>
                 </li>
+
                 <li class="card">
-                    <a href="/creators/havocassassin.html">
-                        <img src="PFPs/TheHavocAssassin.webp" alt="TheHavocAssassin">
-                        <span class="creator-name">TheHavocAssassin</span>
+                    <a href="https://discord.gg/8aCHvWKDee" target="_blank">
+                        <img src="/icons/Discord.svg" alt="Discord Server">
+                        <span class="creator-name">Discord</span>
                     </a>
                 </li>
+
                 <li class="card">
-                    <a href="/creators/cboydoesstuff.html">
-                        <img src="PFPs/CBoyPFP.webp" alt="CBoyDoesStuff">
-                        <span class="creator-name">CBoyDoesStuff</span>
+                    <a href="https://pandora.app.link/QRdf5B4OWVb" target="_blank">
+                        <img class="theme-icon" src="/icons/Pandora_Logo_Black.webp"
+                            data-light-icon="/icons/Pandora_Logo_Black.webp"
+                            data-dark-icon="/icons/Pandora_Logo_White.webp" alt="Pandora">
+                        <span class="creator-name">Pandora</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="https://open.spotify.com/artist/4KJllzVnOipe0J5t996eRl?si=19eONrF-Reu1GV8a64Ylog"
+                        target="_blank">
+                        <img src="/icons/spotify.svg" alt="Spotify">
+                        <span class="creator-name">Spotify</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="https://www.youtube.com/channel/UCFOqK70yyqm0rJMO5kH5zEQ" target="_blank">
+                        <img src="/icons/youtubemusic.svg" alt="YouTube Music">
+                        <span class="creator-name">YouTube Music</span>
                     </a>
                 </li>
             </ul>
+
 
 
         </div>
@@ -132,41 +150,6 @@
             observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
         </script>
     </div>
-
-
-    <!-- <div class="mc-container">
-        <div class="minecraft-section">
-            <h1>TheTimeVortex Create Modpack</h1>
-            <br>
-            <h3>Launcher Installation</h3>
-            <ul>
-                <li><a href="https://modrinth.com/modpack/thetimevortex-create" target="_blank">Modrinth Download</a>
-                </li>
-                <li><a href="https://www.curseforge.com/minecraft/modpacks/the-time-vortex-create"
-                        target="_blank">CurseForge Download</a></li>
-            </ul>
-            <br>
-            <h3>Manual Installation</h3>
-            <ul>
-                <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual-2.0.1.7z"
-                        target="_blank">Manual Download</a></li>
-                <li><a href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.0/forge-1.20.1-47.4.0-installer.jar"
-                        target="_blank">Forge Installer</a></li>
-            </ul>
-            <br>
-            <h3>Important Information</h3>
-            <p>When updating, please backup your <strong>journeymap</strong> folder to save your wavepoints.</p>
-            <p>Lastly, FTB mods aren't on Modrinth due to copyright issues.</p>
-            <br>
-            <h3>TheTimeVortex Create Server</h3>
-            <p>IP: <code class="server-ip">mc.thetimevortex.net</code></p>
-            <p>Fallback: <code class="server-ip">TheTimeVortexCreate.exaroton.me</code></p>
-            <p><strong>Server Availability:</strong> Not 24/7; whitelisted players can wake the server. The server will
-                mainly be up when TheDoctorttv is live on Twitch and Youtube.</p>
-        </div>
-    </div> -->
-
-
     <global-footer></global-footer>
 </body>
 
